# memory-seam-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
scripts/: verify.sh
src/memory_seam_mcp/: __init__.py  server.py
tests/: test_stdio_smoke.py
