[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-seam-mcp"
version = "0.1.0"
description = "Memory Seam MCP stdio bridge for local markdown notes."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Jeremy Knows" },
]
dependencies = [
  "memory-seam @ git+https://github.com/jeremyknows/memory-seam.git",
  "mcp",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
memory-seam-mcp = "memory_seam_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_seam_mcp"]


[tool.hatch.metadata]
allow-direct-references = true
